tests/cli/snapshots/cli__global__colors_can_be_forced_off_whatever_the_environment_says.snap
---
source: tests/cli/global.rs
info:
  program: slcr
  args:
    - "--enable-colors"
    - never
    - check
    - broken.yaml
  env:
    CLICOLOR_FORCE: "1"
---
success: false
exit_code: 1
----- stdout -----
broken.yaml: 1 violation

----- stderr -----
  × broken.yaml: 1 violation

Error: 
  × REQ-001 is refined by REQ-002 but has no `refinement`
  help: set `refinement` to AND, OR, or XOR

Error:   × the check failed for 1 of 1 file
