tests/cli/snapshots/cli__global__eval_is_not_implemented.snap
---
source: tests/cli/global.rs
info:
  program: slcr
  args:
    - eval
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error:   × `slcr eval` is not implemented yet
