tests/cli/snapshots/cli__global__log_level_can_come_from_the_environment.snap
---
source: tests/cli/global.rs
info:
  program: slcr
  args:
    - init
    - todo-api.yaml
  env:
    LOG_LEVEL: DEBUG
---
success: true
exit_code: 0
----- stdout -----
todo-api.yaml: created specification todo-api

----- stderr -----
[TIMESTAMP] DEBUG creating a requirements file path=todo-api.yaml name=todo-api
