tests/cli/snapshots/cli__global__log_level_shows_lower_levels_on_stderr.snap
---
source: tests/cli/global.rs
info:
  program: slcr
  args:
    - "--log-level"
    - debug
    - render
---
success: true
exit_code: 0
----- stdout -----
SPEC.md: rendered todo-api

----- stderr -----
[TIMESTAMP] DEBUG rendering a requirements file path=SPEC.slcr.yml output=SPEC.md
