tests/cli/snapshots/cli__global__no_subcommand_prints_the_help.snap
---
source: tests/cli/global.rs
info:
  program: slcr
  args: []
---
success: true
exit_code: 0
----- stdout -----
slcr command-line interface

Usage: slcr [OPTIONS] [COMMAND]

Commands:
  init     Create a specification with its root and Glossary sections
  render   Render a specification as Markdown, to `SPEC.md` by default
  slice    Write the slice for one requirement (not yet implemented)
  eval     Report whether the specification's requirements are satisfied (not yet implemented)
  check    Report the invariants requirements files break
  version  Print the CLI version and exit
  help     Print this message or the help of the given subcommand(s)

Options:
      --enable-colors <ENABLE_COLORS>
          Whether to color the output

          Possible values:
          - always: Always color the output
          - never:  Never color the output
          - auto:   Detect whether the terminal is a tty before deciding to color
          
          [default: auto]

      --log-level <LOG_LEVEL>
          Sets the maximum log level. Defaults to INFO. Options are 'trace', 'debug', 'info', 'warn', 'error', and 'off'. 'off' implies no logger will occur. Options are case-insensitive
          
          [env: LOG_LEVEL=]
          [default: info]

  -h, --help
          Print help (see a summary with '-h')

----- stderr -----
